--- a/openfisca_barcelona/tests/benefits/GE-051-02.yaml
+++ b/openfisca_barcelona/tests/benefits/GE-051-02.yaml
@@ -4,6 +4,8 @@
   absolute_error_margin: false
   families:
      adults: ["adult1"]
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
@@ -27,6 +29,8 @@
   absolute_error_margin: false
   families:
      adults: ["adult1"]
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1980-01-01
@@ -50,6 +54,8 @@
   absolute_error_margin: false
   families:
      adults: ["adult1"]
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
@@ -72,6 +78,8 @@
   absolute_error_margin: false
   families:
      adults: ["adult1"]
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
@@ -95,6 +103,8 @@
   absolute_error_margin: false
   families:
      adults: ["adult1"]
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
@@ -118,6 +128,8 @@
   absolute_error_margin: false
   families:
      adults: ["adult1"]
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
@@ -140,6 +152,8 @@
   absolute_error_margin: false
   families:
      adults: ["adult1"]
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
@@ -163,6 +177,8 @@
   absolute_error_margin: false
   families:
      adults: ["adult1"]
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
@@ -185,6 +201,8 @@
   absolute_error_margin: false
   families:
      adults: ["adult1"]
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
@@ -207,6 +225,8 @@
   absolute_error_margin: false
   families:
      adults: ["adult1"]
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
@@ -230,6 +250,8 @@
   absolute_error_margin: false
   families:
      adults: ["adult1"]
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
