--- a/openfisca_barcelona/tests/benefits/EG-233.yaml
+++ b/openfisca_barcelona/tests/benefits/EG-233.yaml
@@ -18,6 +18,8 @@
      valor_cadastral_finques_urbanes:
       2016: 0
      tipus_custodia: total
+  unitats_de_convivencia:
+    persones_que_conviuen: ["adult1", "adult2", "adult3", "menor1"]
   persones:
    - id: "adult1"
      ingressos_bruts:
@@ -60,6 +62,8 @@
      valor_cadastral_finques_urbanes:
       2016: 0
      tipus_custodia: compartida
+  unitats_de_convivencia:
+    persones_que_conviuen: ["adult1", "adult2", "adult3", "menor1"]
   persones:
    - id: "adult1"
      ingressos_bruts:
@@ -103,6 +107,8 @@
      valor_cadastral_finques_urbanes:
       2016: 0
      tipus_custodia: cap
+  unitats_de_convivencia:
+    persones_que_conviuen: ["adult1", "adult2", "adult3", "menor1"]
   persones:
    - id: "adult1"
      ingressos_bruts:
@@ -134,6 +140,8 @@
      altres_persones: ["adult3"]
      menors: ["menor1"]
      tipus_custodia: total
+  unitats_de_convivencia:
+    persones_que_conviuen: ["adult1", "adult2", "adult3", "menor1"]
   persones:
    - id: "adult1"
      ingressos_bruts:
@@ -160,6 +168,8 @@
      altres_persones: ["adult3"]
      menors: ["menor1"]
      tipus_custodia: total
+  unitats_de_convivencia:
+    persones_que_conviuen: ["adult1", "adult2", "adult3", "menor1"]
   persones:
    - id: "adult1"
      ingressos_bruts:
@@ -187,6 +197,8 @@
      altres_persones: ["adult3"]
      menors: ["menor1"]
      tipus_custodia: total
+  unitats_de_convivencia:
+    persones_que_conviuen: ["adult1", "adult2", "adult3", "menor1"]
   persones:
    - id: "adult1"
      ingressos_bruts:
@@ -213,6 +225,8 @@
      altres_familiars: ["adult3"]
      menors: ["menor1"]
      tipus_custodia: total
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1", "adult2", "adult3", "menor1"]
   persones:
    - id: "adult1"
      ingressos_bruts:
@@ -239,6 +253,8 @@
      altres_persones: ["adult3"]
      menors: ["menor1"]
      tipus_custodia: total
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1", "adult2", "adult3", "menor1"]
   persones:
    - id: "adult1"
      ingressos_bruts:
@@ -265,6 +281,8 @@
      altres_persones: ["adult3"]
      menors: ["menor1"]
      tipus_custodia: total
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1", "adult2", "adult3", "menor1"]
   persones:
    - id: "adult1"
      ingressos_bruts:
@@ -291,6 +309,8 @@
      altres_persones: ["adult3"]
      menors: ["menor1"]
      tipus_custodia: cap
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1", "adult2", "adult3", "menor1"]
   persones:
    - id: "adult1"
      ingressos_bruts:
@@ -319,6 +339,8 @@
      menors: ["menor1"]
      tipus_familia_nombrosa: general
      tipus_custodia: cap
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1", "adult2", "adult3", "menor1"]
   persones:
    - id: "adult1"
      ingressos_bruts:
@@ -357,6 +379,8 @@
      valor_cadastral_finques_urbanes:
       2016: 0
      tipus_custodia: total
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1", "adult2", "adult3", "menor1"]
   persones:
    - id: "adult1"
      ingressos_bruts:
@@ -400,6 +424,8 @@
      valor_cadastral_finques_urbanes:
       2016: 0
      tipus_custodia: total
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1", "adult2", "adult3", "menor1"]
   persones:
    - id: "adult1"
      ingressos_bruts:
@@ -442,6 +468,8 @@
      valor_cadastral_finques_urbanes:
       2016: 0
      tipus_custodia: total
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1", "adult2", "adult3", "menor1"]
   persones:
    - id: "adult1"
      ingressos_bruts:
@@ -485,6 +513,8 @@
      valor_cadastral_finques_urbanes:
       2016: 42901
      tipus_custodia: total
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1", "adult2", "adult3", "menor1"]
   persones:
    - id: "adult1"
      ingressos_bruts:
@@ -527,6 +557,8 @@
      valor_cadastral_finques_urbanes:
       2016: 0
      tipus_custodia: total
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1", "menor1", "menor2"]
   persones:
    - id: "adult1"
      ingressos_bruts:
@@ -567,6 +599,8 @@
      valor_cadastral_finques_urbanes:
       2016: 0
      tipus_custodia: total
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1", "menor1"]
   persones:
    - id: "adult1"
      ingressos_bruts:
