--- a/openfisca_barcelona/tests/benefits/GE-051-00.yaml
+++ b/openfisca_barcelona/tests/benefits/GE-051-00.yaml
@@ -4,6 +4,8 @@
   absolute_error_margin: false
   families:
      adults: ["adult1"]
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: '1961-01-15'
