--- a/openfisca_barcelona/tests/benefits/HA-003.yaml
+++ b/openfisca_barcelona/tests/benefits/HA-003.yaml
@@ -1,4 +1,4 @@
-- name: "Persona amb tots els requeriments de HA-001 reb l'ajuda"
+- name: "Persona amb tots els requeriments de HA-003 reb l'ajuda"
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
@@ -6,19 +6,20 @@
     adults: [ adult ]
   unitats_de_convivencia:
      persones_que_conviuen: [ adult ]
-     ha_participat_en_un_proces_de_mediacio: true
      import_del_lloguer: 800
      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
      relacio_de_parentiu_amb_el_propietari: false
      zona_de_lhabitatge: zona_a
+     ha_pagat_12_mesos_daquesta_hipoteca: true
+     fa_mes_de_12_mesos_que_existeix_el_deute_de_hipoteca: false
   persones:
    - id: adult
      ingressos_bruts:
       2016: 6348
      temps_empadronat_habitatge_actual: menys_nou_mesos
      tipus_document_identitat: DNI
-     titular_contracte_de_lloguer: true
-     municipi_empadronament: barcelona
+     titular_hipoteca: true
+     municipi_empadronament: altres
   output_variables:
-     HA_001: [ true ]
+     HA_003: [ true ]
