--- a/openfisca_barcelona/tests/benefits/HA-004.yaml
+++ b/openfisca_barcelona/tests/benefits/HA-004.yaml
@@ -1,4 +1,4 @@
-- name: "Persona amb tots els requeriments de HA-001 reb l'ajuda"
+- name: "Persona amb tots els requeriments de HA-004 reb l'ajuda"
   description: Ajuda lloguer just
   period: 2017-01
   absolute_error_margin: false
@@ -6,12 +6,13 @@
     adults: [ adult ]
   unitats_de_convivencia:
      persones_que_conviuen: [ adult ]
-     ha_participat_en_un_proces_de_mediacio: true
      import_del_lloguer: 800
      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
      relacio_de_parentiu_amb_el_propietari: false
      zona_de_lhabitatge: zona_a
+     ha_pagat_almenys_3_quotes_del_lloguer: true
+     des_de_quan_teniu_deutes_de_lloguer: menys_dun_any
   persones:
    - id: adult
      ingressos_bruts:
@@ -19,6 +20,6 @@
      temps_empadronat_habitatge_actual: menys_nou_mesos
      tipus_document_identitat: DNI
      titular_contracte_de_lloguer: true
-     municipi_empadronament: barcelona
+     municipi_empadronament: altres
   output_variables:
-     HA_001: [ true ]
+     HA_004: [ true ]
