--- a/openfisca_barcelona/tests/benefits/HA-003.yaml
+++ b/openfisca_barcelona/tests/benefits/HA-003.yaml
@@ -6,13 +6,14 @@
     adults: [ adult ]
   unitats_de_convivencia:
      persones_que_conviuen: [ adult ]
-     import_del_lloguer: 800
+     import_de_la_hipoteca: 400
      es_ocupant_dun_habitatge_gestionat_per_lagencia_de_lhabitatge: false
      tinc_alguna_propietat_a_part_habitatge_habitual_i_disposo_dusdefruit: false
      relacio_de_parentiu_amb_el_propietari: false
      zona_de_lhabitatge: zona_a
      ha_pagat_12_mesos_daquesta_hipoteca: true
      fa_mes_de_12_mesos_que_existeix_el_deute_de_hipoteca: false
+     demarcacio_de_lhabitatge: tarragona
   persones:
    - id: adult
      ingressos_bruts:
