Add MIFO benefits

--- a/openfisca_barcelona/parameters/benefits/HA001/import_lloguer_maxim.yaml
+++ b/openfisca_barcelona/parameters/benefits/HA001/import_lloguer_maxim.yaml
@@ -57,3 +57,33 @@ HA004:
     values:
       2017-01-01:
         value: 450
+
+HA005:
+  barcelona_ciutat:
+    values:
+      2017-01-01:
+        value: 750
+  barcelona_provincia:
+    values:
+      2017-01-01:
+        value: 600
+  desconeguda:
+    values:
+      2017-01-01:
+        value: 0
+  girona:
+    values:
+      2017-01-01:
+        value: 450
+  lleida:
+    values:
+      2017-01-01:
+        value: 400
+  terres_de_lebre:
+    values:
+      2017-01-01:
+        value: 350
+  tarragona:
+    values:
+      2017-01-01:
+        value: 450
